<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="app_name">FTC Robot Controller</string>
  <string name="ok">OK</string>
  <string name="pair_with_driver_station_activity">Pair With Driver Station</string>
  <string name="pair_with_driver_station_menu_item">Pair With Driver Station</string>
  <string name="pair_instructions">        Make sure that the FTC Driver Station app is open on your other device, and that both devices have wifi enabled</string>

  <!-- Configuration stuff -->
  <string name="add_motor_controller_menu_item">Add Motor Controller</string>
  <string name="add_servo_controller_menu_item">Add Servo Controller</string>
  <string name="edit_motor_controller_menu_item">Edit Motor Controller</string>
  <string name="edit_motor_controller_activity">Edit Motor Controller</string>
  <string name="edit_servo_controller_activity">Edit Servo Controller</string>
  <string name="edit_legacy_module_controller_activity">Edit Legacy Module Controller</string>
  <string name="configure_activity">Configure Robot</string>
  <string name="action_configuration">Configure Robot</string>
  <string name="configure_menu_item">Configure Robot</string>
  <string name="load_menu_item">Load Configuration File</string>
  <string name="device_type">Device Types</string>
  <string name="scan">Scan</string>
  <string name="scanButton_text">Press this button to scan for attached devices</string>
  <string name="save_button">Save</string>
  <string name="cancel">Cancel</string>
  <string name="done_button">Done</string>
  <string name="name_prompt_text">Enter name</string>
  <string name="name_prompt_undertext">Enter the name for this device here</string>
  <string name="file_prompt">Choose Configuration File</string>
  <string name="save_configuration">Save Configuration</string>
  <string name="writeXML_text">Press this button to write the current configuration to an XML file</string>
  <string name="writeXML_prompt">Select an XML file to instantiate a Robot from that file</string>
  <string name="readXML_text">Select an XML file to instantiate a Robot from that file</string>
  <string name="autoconfigure">AutoConfigure</string>
  <string name="autoconfigure_menu_item">AutoConfigure</string>
  <string name="autoconfigureLaunch_text">Press this button to use the AutoConfigure tool</string>
  <string name="autoconfigureButton_text">Press this button to attempt to AutoConfigure your robot</string>

  <!-- Legacy Module options -->
  <string name="choice_prompt">Which sensor is attached?</string>

  <string-array name="choice_array">
      <item>GYRO</item>
      <item>COMPASS</item>
      <item>IR_SEEKER</item>
      <item>LIGHT_SENSOR</item>
      <item>ACCELEROMETER</item>
      <item>MOTOR_CONTROLLER</item>
      <item>SERVO_CONTROLLER</item>
      <item>NOTHING</item>
  </string-array>

  <string name="default_port">0</string>
  <string name="titleText_view">Select the type of connected device here</string>
  <string name="edit_controller">Edit Controller</string>
  <string name="legacy_controller_name">Enter the name for this legacy module here</string>
  <string name="device_info">Device Info</string>

  <!-- Motor Controller strings -->
  <string name="motor_controller_name">Motor Controller</string>
  <string name="motor_controller_name_text">Enter the name for this motor controller here</string>
  <string name="port">Port</string>
  <string name="attached">Attached</string>
  <string name="motor_port1">1</string>
  <string name="motor_port2">2</string>
  <string name="motor_name">Enter motor name</string>
  <string name="motor_name_prompt">Enter the name for this motor here</string>

  <!-- Servo Controller strings -->
  <string name="servo_controller_name">Servo Controller</string>
  <string name="servo_controller_name_prompt">Enter the name for this servo controller here</string>
  <string name="servo_name_prompt">Enter the name for this servo here</string>
  <string name="row_port0">0</string>
  <string name="row_port1">1</string>
  <string name="row_port2">2</string>
  <string name="row_port3">3</string>
  <string name="row_port4">4</string>
  <string name="row_port5">5</string>
  <string name="row_port6">6</string>
  <string name="wifi_direct_devices">Wifi Direct Devices:</string>
  <string name="wifi_direct_device_none">none - do not pair</string>
  <string name="restart_robot_menu_item">Restart Robot</string>
  <string name="about_activity">About</string>
  <string name="about_menu_item">About</string>
  <string name="settings_activity">Settings</string>
  <string name="settings_menu_item">Settings</string>
  <string name="setting_driver_station_mac_title">Driver Station MAC Address</string>
  <string name="setting_driver_station_mac_summary">The Controller app will connect to this MAC address using Wifi Direct</string>
  <string name="pref_driver_station_mac">pref_driver_station_mac</string>
  <string name="pref_driver_station_mac_default">NONE</string>
  <string name="pref_hardware_config_filename">pref_hardware_config_filename</string>
  <string name="title_activity_load">LoadActivity</string>
  <string name="hello_world">Hello world!</string>
  <string name="action_settings">Settings</string>
  <string name="title_activity_autoconfigure">AutoconfigureActivity</string>

</resources>
