<menu xmlns:android="http://schemas.android.com/apk/res/android" >

  <item
      android:id="@+id/action_restart_robot"
      android:orderInCategory="100"
      android:showAsAction="never"
      android:title="@string/restart_robot_menu_item"/>

  <item
      android:id="@+id/action_pair_with_driver_station"
      android:orderInCategory="101"
      android:showAsAction="never"
      android:title="@string/pair_with_driver_station_menu_item"/>

   <!-- disabled -->
  <item
      android:id="@+id/action_settings"
      android:enabled="false"
      android:orderInCategory="102"
      android:showAsAction="never"
      android:title="@string/settings_menu_item"/>

  <item
      android:id="@+id/action_configuration"
      android:orderInCategory="104"
      android:showAsAction="never"
      android:title="@string/configure_menu_item"/>

  <item
      android:id="@+id/action_load"
      android:orderInCategory="105"
      android:showAsAction="never"
      android:title="@string/load_menu_item"/>

  <item
    android:id="@+id/action_autoconfigure"
    android:orderInCategory="105"
    android:showAsAction="never"
    android:title="@string/autoconfigure_menu_item"/>

  <item
      android:id="@+id/action_about"
      android:orderInCategory="999"
      android:icon="@android:drawable/ic_menu_info_details"
      android:title="@string/about_menu_item"/>
</menu>
